--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,15 @@
     "install": "^0.13.0",
     "npm": "^10.9.2",
     "react": "^19.1.0",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
