--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.9",
     "install": "^0.13.0",
+    "jspdf": "^3.0.1",
     "npm": "^10.9.2",
     "react": "^19.1.0",
     "react-calendar": "^5.1.0",
@@ -25,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
