--- a/backend/.env
+++ b/backend/.env
@@ -18,4 +18,6 @@ RAZORPAY_KEY_ID=rzp_test_VLCfnymiyd6HGf
 
 RAZORPAY_KEY_SECRET=dwcSRSRah7Y4eBZUzL8MmcYD
 NODE_ENV=development
+GENERATE_SOURCEMAP=false
+
 
